# ICFPC2021

./: LICENSE  README.md  download.sh
.github/workflows/: visualizer.yml  web.yml
amylase/: analysis.py  bruteforce.py  data.txt  dependency.py  expand.py  get_globalist.py  manten.py  package_solutions.py  postprocessor.py  submit.py
checker/: checker.ts  package.json  tsconfig.json
cpp-lib/: compile.sh  geo.h  problem.h
gen_web/: main.rb
hints/edge-matcher/: 105.json  106.json  90.json
hints/flip-rot-0/: 10.json  (+26 more)
human_hints/: 64.txt
kawatea/: bruteforce.cpp  build.sh  download.rb  flex.cpp  hinted_run.rb  infinite_train.rb  rename.rb  repeat_optimize.cpp  run.rb  run.sh  simulated_annealing.cpp  wall.cpp
keitak/: README.md  package.json
kenkoooo/: .env  .env.development  .eslintrc.json  .gitignore  Cargo.toml  README.md  config-overrides.js  package.json
kenkoooo/no-wasm/: Cargo.toml
kenkoooo/no-wasm/src/: main.rs
mkut/: .gitignore
osak/: create_seed.rb  rotate.rb  stat.rb
problems/: 1.in  10.in  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  3.in  30.in  31.in  32.in  33.in  34.in  35.in  36.in  37.in  38.in  39.in  4.in  40.in  41.in  42.in  43.in  44.in  45.in  (+39 more)
ruby-lib/: bonus_gen.rb  problem.rb
test/: test_py.py
tools/: download.sh  ranking.rb
ts-lib/: amyfunc.ts
web/: amylase-bruteforce.html  index.html
y3eadgbe/: break_bruteforce.cpp  run.rb  simulated_annealing.cpp
yuusti/: a.out  amyfunc.cpp  hakushakutasukete.cpp  main.cpp
(+13354 files in other folders)
