[package]
name = "no-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0.64"
manarimo-lib = { path = "../manarimo-lib" }
brute-force = { path = "../brute-force" }
env_logger = "0.8.4"
log = "0.4.14"
dotenv = "0.15.0"
anyhow = "1.0.42"
